Разделение на страницы

--- a/src/order.html
+++ b/src/order.html
@@ -48,26 +48,7 @@
 		</div>
 		<div class="header__slider slider">
 			<div class="slider__list">
-				<div class="slider__item" style="background-image: url('upload/slides/2.png');">
-					<div class="case">
-						<form class="slider__form form form_line">
-							<div class="form__body row">
-								<div class="form__input input">
-									<div class="input__icon"><img src="upload/icons/user.svg"></div>
-									<input type="text" class="input__wrap" placeholder="Ваше имя" name="name">
-								</div>
-								<div class="form__input input input_phone">
-									<div class="input__icon"><img src="upload/icons/phone.svg"></div>
-									<input type="text" class="input__wrap" placeholder="Номер телефона" name="phone">
-								</div>
-								<button class="form__btn btn btn_orange btn_normal">Записаться</button>
-							</div>
-							<div class="form__foot">
-								<div class="form__policy">Нажимая на кнопку “Записаться” я соглашаюсь с <a data-fancybox data-src="#popup-policy" href="javascript:;">Политикой конфиденциальности</a></div>
-							</div>
-						</form>
-					</div>
-				</div>
+				<a href="" class="slider__item slider__item_3" style="background-image: url('upload/slides/3.png');"></a>
 			</div>
 		</div>
 	</header>
